--- a/src/stories/StyledButton.mdx
+++ b/src/stories/StyledButton.mdx
@@ -1,3 +1,21 @@
-<!-- StyledButton.mdx -->
-
 import { StyledButton } from "../components/StyledButton";
+
+## StyledButton
+
+StyledButtonはカスタムボタンコンポーネントです。`variant`でボタンの色を切り替えることができます。
+
+### Primary
+
+```tsx
+<StyledButton variant="primary">Primary</StyledButton>
+```
+
+<StyledButton variant="primary">Primary</StyledButton>
+
+### Success
+
+```tsx
+<StyledButton variant="success">Success</StyledButton>
+```
+
+<StyledButton variant="success">Success</StyledButton>
